# frapi

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cache copy.json  cache.json
.cargo/: win64_config.toml
assets/: icon.icns
src/: executor.rs  main.rs  settings.rs  states.rs  ui.rs
src/settings/: main_settings.rs  options_settings.rs  ui_settings.rs
src/settings/main_settings/: entity.rs
src/settings/main_settings/entity/: collection_settings.rs  request_settings.rs
src/settings/main_settings/entity/request_settings/: body_settings.rs  method_settigns.rs  protocol_settings.rs  request_setup_settings.rs
src/states/: main_page.rs
src/states/main_page/: collection.rs  entity.rs  filtered_entity.rs  generics.rs  request.rs  response.rs  selected_entity.rs
src/states/main_page/request/: request_data.rs
src/states/main_page/response/: response_data.rs
src/ui/: bottom.rs  colors.rs  fonts.rs  icons.rs  main_menu.rs  main_page.rs
src/ui/main_page/: central_panel.rs  left_panel.rs  right_panel.rs
src/ui/main_page/central_panel/: request_details.rs  responses.rs
src/ui/main_page/central_panel/responses/: json_view.rs
src/ui/main_page/right_panel/: right_panel_events.rs
