[package]
name = "frapi_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.32"
egui = "0.32"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
chrono = "0.4.41"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio-tungstenite = "*"
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
rfd = "0.15.4"

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = [
    "v4",
]